[build-system]
requires = ["uv_build>=0.9.6,<1"]
build-backend = "uv_build"

[project]
name = "pyhpke"
version = "0.6.3"
description = "A Python implementation of HPKE."
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["cryptography>=42.0.1,<47"]
authors = [{ name = "Ajitomi Daisuke", email = "dajiaji@gmail.com" }]
license = "MIT"

[project.urls]
Repository = "https://github.com/dajiaji/pyhpke"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6,<8",
    "pre-commit>=4.1.0,<5",
]
docs = [
    "sphinx>=7.1,<8.0.0",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinx-autodoc-typehints>=2.3.0,<3.0.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGES.rst",
    "docs",
    "tests",
    "tox.ini",
]
exclude = ["docs/_build"]

[tool.hatch.build.targets.wheel]
include = [
    "CHANGES.rst",
    "docs",
    "tests",
    "tox.ini",
]
exclude = ["docs/_build"]
