[build-system]
requires = ["uv_build>=0.9.7,<1"]
build-backend = "uv_build"

[project]
name = "pyhpke"
version = "0.6.4"
description = "A Python implementation of HPKE."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "cryptography>=42.0.1,<47",
]
authors = [{ name = "Ajitomi Daisuke", email = "dajiaji@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/dajiaji/pyhpke"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
docs = [
    "docutils>=0.21.2",
    "sphinx>=7.4.7,<9.0.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.uv.build-backend]
source-include = [
    "tests/**",
    "docs/**",
]
source-exclude = [
    "docs/_build/**",
]

[tool.uv]
cache-dir = ".uv-cache"

[tool.ruff]
target-version = "py310"
line-length = 128  # Match black configuration used by pre-commit hooks.

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true  # Mirrors blacken-docs formatting of fenced blocks.
docstring-code-line-length = 128

[tool.ruff.lint]
# Match the flake8 + flake8-bugbear setup from .pre-commit-config.yaml by enabling
# E/F/W plus B codes, and extend with Ruff's built-in equivalents for the
# plugins we already run (flake8-comprehensions, pyupgrade, flake8-unused-arguments,
# flake8-simplify, isort, debug-statements) per docs.astral.sh/ruff/rules/.
select = [
    "B",
    "E",
    "F",
    "I",
    "S",
    "W",
    "T10",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = ["E203", "E501"]
per-file-ignores = { "tests/**" = ["S101", "S106"] }

[tool.ruff.lint.isort]
known-first-party = ["pyhpke", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
# mypy_path = ["typings"]
# warn_return_any = true
# no_implicit_optional = true
# strict_equality = true
# warn_unused_ignores = true
# disallow_any_generics = true
disallow_any_unimported = true
warn_unreachable = true
ignore_missing_imports = false
pretty = true

# Ignore type errors in tests; they are covered by runtime pytest runs instead.
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
